# innodb

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ChangeLog  LICENCE.md  README  convert_comments.py  flake.nix  plantuml_example.puml  result-out  shell.nix  test_offset.cpp
.cspell/: custom-dictionary-workspace.txt
.cursor/: worktrees.json
.cursor/commands/: InnoRefactor.md
.tmp/: nix-shell.jhxqEU
.tmp/nix-shell.7BqHPk/: nix-shell.oqM5Ts
cmake/: CMakeLists.txt  CMakePresets.json  ci_matrix.cmake  config.cmake  config.h.cmake  doc.md  doxygen.cmake  version.cmake
cps/: CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  Package.swift  binding.gyp  design.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py
cps/bindings/c/: tree-sitter-cps.pc.in
cps/bindings/go/: binding.go  binding_test.go
cps/bindings/python/tests/: test_binding.py
cps/bindings/python/tree_sitter_cps/: __init__.py  binding.c
cps/bindings/rust/: build.rs  lib.rs
cps/bindings/swift/TreeSitterCpsTests/: TreeSitterCpsTests.swift
cps/src/: grammar.json  parser.c
cps/test/corpus/: statements.txt
cps/test_old/: .gitignore  README.md
cps/test_old/data/expected/: namespace2.expected  namespace3.expected
cps/test_old/data/input/: namespace1.cps  namespace2.cps  namespace3.cps
cps/test_old/src/: cps_parser_test.cpp
docs/: allocator_strategy.md  github-workflows.yml
docs/kaitai/: kaitai_user_guide.md
innodb/: .clangd
innodb/cmake/: Makefile.am
innodb/doc/: code-layout.md  deps.plantuml  tasks.md  tasks.txt
innodb/doc/analysis/: global_vars_analysis_1.md  (+1 more)
innodb/include/: haildb.hpp  haildb.hpp.backup  innodb.h  innodb.hpp  innodb.hpp.backup  innodb_async.hpp  innodb_types.h
innodb/m4/: pandora_bison.m4  pandora_canonical.m4  pandora_clock_gettime.m4  pandora_cstdint.m4  pandora_cxx_demangle.m4  pandora_enable_dtrace.m4  pandora_flex.m4  pandora_have_boost.m4  pandora_have_libbdb.m4  pandora_have_libdrizzle.m4  pandora_have_libevent.m4  pandora_have_libhaildb.m4  pandora_have_libhashkit.m4  pandora_have_libmysqlclient.m4  pandora_have_libndbclient.m4  pandora_have_libpcre.m4  pandora_have_libpq.m4  pandora_have_libreadline.m4  pandora_have_libsqlite3.m4  pandora_have_libuuid.m4  pandora_platform.m4  pandora_sasl.m4  pandora_shared_ptr.m4  pandora_visibility.m4  pandora_with_lua.m4  pandora_with_memcached.m4
innodb/tests/: bug579934_open_index_by_name_segv.cpp  ib_client_compare.cpp  ib_compressed.cpp  ib_cursor.cpp  ib_ddl.cpp  ib_deadlock.cpp  ib_dict.cpp  ib_drop.cpp  ib_duplicate_key_name.cpp  ib_index.cpp  ib_logger.cpp  ib_mt_base.cpp  ib_mt_drv.cpp  ib_mt_stress.cpp  ib_mt_t1.cpp  ib_mt_t2.cpp  ib_panic.cpp  ib_perf1.cpp  ib_recover.cpp  ib_search.cpp  ib_shutdown.cpp  ib_status.cpp  ib_table_statistics.cpp  ib_tablename.cpp  ib_test1.cpp  ib_test2.cpp  ib_test3.cpp  ib_test5.cpp  ib_trx_is_interrupted.cpp  ib_types.cpp  ib_update.cpp  ib_zip.cpp  test0aux.cpp
libak/cmake/: cmake_uninstall.cmake.in  install.cmake  modules.cmake  unit_tests.cmake
libak/doc/: MODULES.md
libak/spec/: JSON-parser-spec.md  db-spec.typ  er.mmd  lsp-spec.typ
libak/src/: ak.hpp
reference/libak/: Doxyfile
schema/: README.md  kaitai.schema.json
scripts/: ib
test/: CMakeLists.txt
test/data/expected/: expressions.expected  function.expected  namespace.expected  struct.expected
test/data/input/: expressions.cps  function.cps  namespace.cps  struct.cps
test/src/: cps_parser_test.cpp
tools/: plan.md  repo_layout.txt
tools/innodb-mcp/: c-type-system-ng-test.md  c-type-system-ng.md  c-type-system-q.md  c-type-system.md  improvements-proposals.md  plan.md  updated-proposeal.md
tools/lsp-captnproto/: feature_mapping.json
tools/propagator-model/: lsp_features_checklist.md  propagator-object-model-notation.md  propagator-runtime-plan.md  vscode-ui-specification.md  widget-design-system.md
tools/tree-sitter-cps/: .gitignore  CMakeLists.txt  default.nix  tree-sitter.json
tools/tree-sitter-cps/bindings/c/: tree-sitter-cps.pc.in
tools/tree-sitter-cps/bindings/c/tree_sitter/: tree-sitter-cps.h
tools/tree-sitter-cps/bindings/node/: binding.cc  index.js
tools/tree-sitter-cps/src/: node-types.json
tools/tree-sitter-cps/test/src/: cps_parser_test.cpp
tools/xib-vscode-plugin/: .gitignore  README.md  default.nix  package.json  tsconfig.json
tools/xib-vscode-plugin-native/: CMakeLists.txt  default.nix
tools/xib-vscode-plugin-native/src/: addon.cpp  ib_node_plugin.cpp  test_addon.cpp
tools/xinnodb-node-addon/: CMakeLists.txt  default.nix
tools/xinnodb-vscode-ext/: .vscodeignore  README.md  default.nix  package-lock.json  package.json
xinnodb/: CMakeLists.txt  CMakePresets.json
xinnodb/cmake/: doxygen.cmake
xinnodb/docs/: DoxygenLayout.xml  layout.xml
xinnodb/include/: xinnodb.hpp
xinnodb/include/xinnodb/: state.hpp  xinnodb.hpp
xinnodb/plan/: architecture.md  basic_analysis.md  integration_plan.md
xinnodb/src/alloc/include/: alloc.hpp  alloc_api.hpp  alloc_api_inl.hpp  alloc_api_priv.hpp  alloc_api_priv_inl.hpp
xinnodb/src/alloc/src/: alloc_check_invariants.cpp  alloc_dump.cpp  alloc_freeblock.cpp  alloc_freelist.cpp  alloc_table.cpp
xinnodb/src/alloc/test/: test_defragment.cpp  test_freeblock.cpp  test_freeblock_list.cpp  test_freeblock_list_search.cpp  test_freeblock_tree.cpp  test_split.cpp
xinnodb/src/defs/: defs.cpp  defs.hpp
xinnodb/src/defs/include/: defs.hpp  defs_precompiled.hpp
xinnodb/src/defs/src/: defs.cpp  defs_config_version.cpp.in
xinnodb/src/io/include/: io.hpp
xinnodb/src/io/test/: sum_test2.cpp
xinnodb/src/task/example/: tail_call.cpp  tail_call.hpp  task.cpp  task2.cpp  task3.cpp
xinnodb/src/ut/: ut.hpp
xinnodb/src/ut/include/: ut.hpp  ut.inl  ut_assert.hpp  ut_comptime_string.hpp  ut_dlink.hpp
xinnodb/src/ut/src/: ut_ut.cpp
xinnodb/src/ut/test/: mul_test.cpp  test_dlist.cpp  test_ut_assert.cpp  test_ut_assert_removed.cpp  test_ut_comptime_string.cpp
xinnodb/test/defs/: sum_test.cpp
xinnodb/test/io/: diff_test.cpp
(+1341 files in other folders)
